# termibar

./: .gitignore  README.md  install.sh
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: ConfigGeneral.qml  ConfigTerminals.qml  TerminalSession.qml  main.qml  utils.js
plugin/: CMakeLists.txt  konsoleitem.cpp  konsoleitem.h  test.qml  test_main.cpp
